# tg-event-planner

./: .bumpver.toml  .coveragerc  .cspell.json  .gitignore  .ipdb  .model_diagram.dot  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .ruff.toml  CHANGELOG.md  Dockerfile  ERRORCODES.md  Procfile.sh  README.md  docker-compose.yaml  manage.py  pyproject.toml
.github/: .example.env
.github/workflows/: graph_model.yaml  lint.yaml  release-production.yaml  release-staging.yaml  test.yaml  trigger-ci.yaml  update-dependencies.yaml
docs/: docker.md  social.md
event_planner/: __init__.py  asgi.py  urls.py  wsgi.py
event_planner/api/: __init__.py  apps.py  exceptions.py  pagination.py  typing.py
event_planner/api/account/: __init__.py  adaptor.py
event_planner/api/admin/: __init__.py
event_planner/api/factories/: __init__.py  user.py
event_planner/api/migrations/: 0001_initial.py  0002_alter_user_email.py
event_planner/api/models/: __init__.py  event.py  user.py
event_planner/api/scripts/: get_random_secret_key.py  renew_openapi_spec.py
event_planner/api/serializers/: __init__.py  auth.py  registration.py  social.py
event_planner/api/tests/: test_fixtures.py  testcases.py
event_planner/common/: exceptions.py  frontend_utils.py  singleton_router.py
event_planner/settings/: __init__.py  admin.py  auth_user_model.py  base_dir.py  database.py  email.py  frontend.py  i18n.py  installed_apps.py  middleware.py  password.py  rest_auth.py  restframework.py  spectacular.py  static.py  templates.py  urlconf.py  warnings.py  wsgi.py
(+38 files in other folders)
